Label of an <option> element should not be displayed in quirks mode https://bugs.webkit.org/show_bug.cgi?id=169296 <rdar://problem/30900751>

Reviewed by Simon Fraser.

Source/WebCore:

Label of an <option> element should not be displayed in quirks mode, to
match Chrome and Firefox. However, we should still display the label in
strict mode, as per the HTML specification:
- https://html.spec.whatwg.org/multipage/rendering.html#the-select-element-2

Chrome renders the label in strict mode, same as us. Firefox does not:
- https://bugzilla.mozilla.org/show_bug.cgi?id=1345242

Tests: fast/dom/HTMLOptionElement/option-label-quirksmode.html
       fast/dom/HTMLOptionElement/option-label-quirksmode2.html
       fast/dom/HTMLOptionElement/option-label-strictmode.html

* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::displayLabel):
(WebCore::HTMLOptionElement::textIndentedToRespectGroupLabel):
* html/HTMLOptionElement.h:

LayoutTests:

Add layout test coverage.

* fast/dom/HTMLOptionElement/option-label-quirksmode-expected.html: Added.
* fast/dom/HTMLOptionElement/option-label-quirksmode.html: Added.
* fast/dom/HTMLOptionElement/option-label-quirksmode2-expected.html: Added.
* fast/dom/HTMLOptionElement/option-label-quirksmode2.html: Added.
* fast/dom/HTMLOptionElement/option-label-strictmode-expected.html: Added.
* fast/dom/HTMLOptionElement/option-label-strictmode.html: Added.


Canonical link: https://commits.webkit.org/186302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213542 268f45cc-cd09-0410-ab3c-d52691b4dbfc